Fixing autocomplete z-index in reply prompt

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -707,6 +707,7 @@ ul.dropdown-menu
 	border: 1px solid rgba(0, 0, 0, 0.2)
 	border-bottom: solid 2px #B4C669
 	@extend .box-shadow
+	z-index: 2000!important
 	li
 		> li > a
 			padding: 3px 20px
